--- a/conf/cmi/search_api.index.pages_en.yml
+++ b/conf/cmi/search_api.index.pages_en.yml
@@ -3,22 +3,22 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.storage.node.field_lead_in
+    - field.storage.node.field_search_keywords
     - field.storage.node.field_content
+    - field.storage.paragraph.field_banner_desc
     - field.storage.paragraph.field_accordion_item_content
     - field.storage.paragraph.field_accordion_item_heading
     - field.storage.paragraph.field_accordion_items
     - field.storage.paragraph.field_text
     - field.storage.paragraph.field_accordion_text
     - field.storage.paragraph.field_accordion_title
-    - field.storage.paragraph.field_banner_desc
     - field.storage.paragraph.field_banner_title
-    - field.storage.node.field_lead_in
-    - field.storage.node.field_search_keywords
     - search_api.server.elastic
   module:
-    - paragraphs
-    - taxonomy
     - node
+    - taxonomy
+    - paragraphs
     - search_api
 id: pages_en
 name: 'Pages EN'
@@ -111,7 +111,7 @@ field_settings:
     label: 'Search keywords » Taxonomy term » Name'
     datasource_id: 'entity:node'
     property_path: 'field_search_keywords:entity:name'
-    type: string
+    type: text
     dependencies:
       config:
         - field.storage.node.field_search_keywords
