THF-0: THF-0: Drupal core & module updates

--- a/conf/cmi/core.entity_form_display.node.landing_page.default.yml
+++ b/conf/cmi/core.entity_form_display.node.landing_page.default.yml
@@ -158,6 +158,11 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  simple_sitemap:
+    weight: 10
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   status:
     type: boolean_checkbox
     weight: 12
@@ -208,3 +213,4 @@ content:
     third_party_settings: {  }
 hidden:
   field_liftup_image: true
+  hide_sidebar_navigation: true
