--- a/conf/cmi/core.extension.yml
+++ b/conf/cmi/core.extension.yml
@@ -129,6 +129,7 @@ module:
   twig_tweak: 0
   tyollisyyspalvelut_common: 0
   tyollisyyspalvelut_elasticsearch: 0
+  tyollisyyspalvelut_linkedevents: 0
   tyollisyyspalvelut_migrate: 0
   update: 0
   update_helper: 0
