--- a/conf/cmi/editor.editor.basic_html.yml
+++ b/conf/cmi/editor.editor.basic_html.yml
@@ -50,7 +50,7 @@ settings:
   plugins:
     drupallink:
       linkit_enabled: true
-      linkit_profile: helfi
+      linkit_profile: tpr_content
 image_upload:
   status: true
   scheme: public
