--- a/conf/cmi/core.entity_view_display.node.event.teaser.yml
+++ b/conf/cmi/core.entity_view_display.node.event.teaser.yml
@@ -17,6 +17,7 @@ dependencies:
     - field.field.node.event.field_location
     - field.field.node.event.field_location_extra_info
     - field.field.node.event.field_location_id
+    - field.field.node.event.field_offers_info_url
     - field.field.node.event.field_publisher
     - field.field.node.event.field_short_description
     - field.field.node.event.field_start_time
@@ -50,6 +51,7 @@ hidden:
   field_location: true
   field_location_extra_info: true
   field_location_id: true
+  field_offers_info_url: true
   field_publisher: true
   field_short_description: true
   field_start_time: true
