--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "drupal/migrate_tools": "^5.0",
         "drupal/next": "^1.3",
         "drupal/paragraphs_features": "^1.11",
+        "drupal/publication_date": "^2.0@beta",
         "drupal/quick_node_clone": "^1.14",
         "drupal/redis": "^1.5",
         "drush/drush": "^10.4"
