--- a/conf/cmi/core.entity_view_display.node.event.default.yml
+++ b/conf/cmi/core.entity_view_display.node.event.default.yml
@@ -84,5 +84,6 @@ hidden:
   field_tags: true
   field_text: true
   langcode: true
+  published_at: true
   search_api_excerpt: true
   toc_enabled: true
