--- a/conf/cmi/core.entity_view_display.node.page.search_index.yml
+++ b/conf/cmi/core.entity_view_display.node.page.search_index.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.page.field_content
     - field.field.node.page.field_has_hero
     - field.field.node.page.field_hero
+    - field.field.node.page.field_hide_navigation
     - field.field.node.page.field_hide_search
     - field.field.node.page.field_hide_sidebar
     - field.field.node.page.field_lead_in
@@ -33,6 +34,7 @@ hidden:
   field_content: true
   field_has_hero: true
   field_hero: true
+  field_hide_navigation: true
   field_hide_search: true
   field_hide_sidebar: true
   field_lead_in: true
@@ -43,5 +45,6 @@ hidden:
   field_search_keywords: true
   field_sidebar_content: true
   langcode: true
+  published_at: true
   search_api_excerpt: true
   toc_enabled: true
