--- a/conf/cmi/field.field.node.event.field_street_address.yml
+++ b/conf/cmi/field.field.node.event.field_street_address.yml
@@ -12,7 +12,7 @@ bundle: event
 label: 'Street address'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
