THF-105: Add new vocabulary for event tags.

--- a/conf/cmi/language.content_settings.taxonomy_term.event_tags.yml
+++ b/conf/cmi/language.content_settings.taxonomy_term.event_tags.yml
@@ -1,18 +1,16 @@
-uuid: 3a63399a-b0ae-45df-9328-f26fb04aefc4
+uuid: 43d26305-7d63-47c4-9723-05873883c89e
 langcode: en
 status: true
 dependencies:
   config:
-    - taxonomy.vocabulary.search_keywords
+    - taxonomy.vocabulary.event_tags
   module:
     - content_translation
 third_party_settings:
   content_translation:
     enabled: true
-    bundle_settings:
-      untranslatable_fields_hide: '0'
-id: taxonomy_term.search_keywords
+id: taxonomy_term.event_tags
 target_entity_type_id: taxonomy_term
-target_bundle: search_keywords
+target_bundle: event_tags
 default_langcode: site_default
 language_alterable: false
