--- a/conf/cmi/core.entity_form_display.node.event.default.yml
+++ b/conf/cmi/core.entity_form_display.node.event.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.event.field_end_time
     - field.field.node.event.field_event_status
+    - field.field.node.event.field_event_tags
     - field.field.node.event.field_external_links
     - field.field.node.event.field_id
     - field.field.node.event.field_image_alt
@@ -28,7 +29,9 @@ dependencies:
     - hdbt_admin_editorial
     - link
     - path
+    - publication_date
     - scheduler
+    - select2
     - text
 id: node.event.default
 targetEntityType: node
@@ -43,7 +46,7 @@ content:
     third_party_settings: {  }
   field_end_time:
     type: string_textfield
-    weight: 19
+    weight: 20
     region: content
     settings:
       size: 60
@@ -51,15 +54,25 @@ content:
     third_party_settings: {  }
   field_event_status:
     type: string_textfield
-    weight: 17
+    weight: 18
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_event_tags:
+    type: select2_entity_reference
+    weight: 28
+    region: content
+    settings:
+      width: 100%
+      autocomplete: false
+      match_operator: CONTAINS
+      match_limit: 10
+    third_party_settings: {  }
   field_external_links:
     type: link_default
-    weight: 28
+    weight: 30
     region: content
     settings:
       placeholder_url: ''
@@ -75,7 +88,7 @@ content:
     third_party_settings: {  }
   field_image_alt:
     type: string_textfield
-    weight: 15
+    weight: 16
     region: content
     settings:
       size: 60
@@ -83,7 +96,7 @@ content:
     third_party_settings: {  }
   field_image_name:
     type: string_textfield
-    weight: 13
+    weight: 14
     region: content
     settings:
       size: 60
@@ -91,7 +104,7 @@ content:
     third_party_settings: {  }
   field_image_url:
     type: string_textfield
-    weight: 14
+    weight: 15
     region: content
     settings:
       size: 60
@@ -99,7 +112,7 @@ content:
     third_party_settings: {  }
   field_in_language:
     type: string_textfield
-    weight: 16
+    weight: 17
     region: content
     settings:
       size: 60
@@ -107,7 +120,7 @@ content:
     third_party_settings: {  }
   field_info_url:
     type: string_textfield
-    weight: 27
+    weight: 29
     region: content
     settings:
       size: 60
@@ -115,7 +128,7 @@ content:
     third_party_settings: {  }
   field_last_modified_time:
     type: string_textfield
-    weight: 20
+    weight: 21
     region: content
     settings:
       size: 60
@@ -123,7 +136,7 @@ content:
     third_party_settings: {  }
   field_location:
     type: string_textfield
-    weight: 21
+    weight: 22
     region: content
     settings:
       size: 60
@@ -131,7 +144,7 @@ content:
     third_party_settings: {  }
   field_location_extra_info:
     type: string_textfield
-    weight: 24
+    weight: 25
     region: content
     settings:
       size: 60
@@ -139,14 +152,14 @@ content:
     third_party_settings: {  }
   field_location_id:
     type: number
-    weight: 23
+    weight: 24
     region: content
     settings:
       placeholder: ''
     third_party_settings: {  }
   field_offers_info_url:
     type: string_textfield
-    weight: 32
+    weight: 34
     region: content
     settings:
       size: 60
@@ -154,7 +167,7 @@ content:
     third_party_settings: {  }
   field_publisher:
     type: string_textfield
-    weight: 25
+    weight: 26
     region: content
     settings:
       size: 60
@@ -162,7 +175,7 @@ content:
     third_party_settings: {  }
   field_short_description:
     type: text_textarea
-    weight: 12
+    weight: 13
     region: content
     settings:
       rows: 5
@@ -170,7 +183,7 @@ content:
     third_party_settings: {  }
   field_start_time:
     type: string_textfield
-    weight: 18
+    weight: 19
     region: content
     settings:
       size: 60
@@ -178,7 +191,7 @@ content:
     third_party_settings: {  }
   field_street_address:
     type: string_textfield
-    weight: 22
+    weight: 23
     region: content
     settings:
       size: 60
@@ -186,7 +199,7 @@ content:
     third_party_settings: {  }
   field_tags:
     type: options_select
-    weight: 26
+    weight: 27
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -220,7 +233,7 @@ content:
     third_party_settings: {  }
   publish_on:
     type: datetime_timestamp_no_default
-    weight: 29
+    weight: 31
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -231,7 +244,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   simple_sitemap:
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -258,7 +271,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -274,12 +287,12 @@ content:
     third_party_settings: {  }
   unpublish_on:
     type: datetime_timestamp_no_default
-    weight: 30
+    weight: 32
     region: content
     settings: {  }
     third_party_settings: {  }
   url_redirects:
-    weight: 31
+    weight: 33
     region: content
     settings: {  }
     third_party_settings: {  }
