--- a/conf/cmi/next.next_site.tyollisyyspalvelut_ui.yml
+++ b/conf/cmi/next.next_site.tyollisyyspalvelut_ui.yml
@@ -7,3 +7,5 @@ label: 'Tyollisyyspalvelut UI'
 base_url: 'http://localhost:3000'
 preview_url: 'http://localhost:3000/api/preview'
 preview_secret: 'Fk*RTBs6Pnk6nk*keft2zWEVrkWw_Yrm'
+revalidate_url: 'https://tyollisyyspalvelut.hel.fi/api/revalidate'
+revalidate_secret: 'Fk*RTBs6Pnk6nk*keft2zWEVrkWw_Yrm'
