--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.6.7",
         "druidfi/omen": "^0.2.0",
-        "drupal/core-composer-scaffold": "9.4.7",
-        "drupal/core-recommended": "^9.4",
+        "drupal/core-composer-scaffold": "^9.5",
+        "drupal/core-recommended": "^9.5",
         "drupal/easy_install": "^10.5",
         "drupal/entity_browser": "^2.8",
         "drupal/focal_point": "^1.5",
@@ -41,7 +41,7 @@
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
         "drupal/coder": "^8.3",
-        "drupal/core-dev": "^9.1",
+        "drupal/core-dev": "^9.5",
         "drupal/devel": "^4.1",
         "phpspec/prophecy-phpunit": "^2",
         "phpunit/phpunit": "~9.4.0"
@@ -84,7 +84,7 @@
                 "Get same results on different request": "https://www.drupal.org/files/issues/2019-07-18/change_request_type-63049395-09.patch"
             },
             "drupal/decoupled_router": {
-                "Unable to resolve path on node in other language than default": "https://www.drupal.org/files/issues/2021-05-05/3111456-34.patch"
+                "Unable to resolve path on node in other language than default": "https://www.drupal.org/files/issues/2022-12-01/decouple_router-3111456-resolve-language-issue-58--get-translation.patch"
             },
             "drupal/jsonapi_extras": {
                 "3232279 - Invalid output JSON schema in UrlLinkEnhancer": "https://www.drupal.org/files/issues/2021-09-10/fix-output-schema-3232279-3.patch",
