--- a/conf/cmi/core.entity_view_display.node.landing_page.default.yml
+++ b/conf/cmi/core.entity_view_display.node.landing_page.default.yml
@@ -48,5 +48,6 @@ hidden:
   field_liftup_image: true
   field_metatags: true
   langcode: true
+  published_at: true
   search_api_excerpt: true
   toc_enabled: true
