THF-523: Allow adding pages and landing pages to other languages menu.

--- a/conf/cmi/node.type.landing_page.yml
+++ b/conf/cmi/node.type.landing_page.yml
@@ -9,6 +9,7 @@ third_party_settings:
   menu_ui:
     available_menus:
       - main
+      - menu-other-languages
     parent: 'main:'
   scheduler:
     expand_fieldset: when_required
