--- a/conf/cmi/pathauto.pattern.news_pattern_other_languages.yml
+++ b/conf/cmi/pathauto.pattern.news_pattern_other_languages.yml
@@ -1,33 +1,35 @@
-uuid: d1e23ab2-d1d5-4301-8db8-7c6672d191cf
-langcode: fi
+uuid: 8c5e891a-618d-4d6a-a5d8-dfbd168d6116
+langcode: en
 status: true
 dependencies:
   module:
     - language
     - node
-id: event_pattern_en
-label: 'Event pattern en'
+id: news_pattern_other_languages
+label: 'News pattern, other languages'
 type: 'canonical_entities:node'
-pattern: 'current-matters/events/[node:title]'
+pattern: 'frontpage/[node:title]'
 selection_criteria:
-  2e678efd-69ec-44db-8d15-29e0f6cea63c:
+  0c536b31-33ca-4570-95da-69fe3d88759f:
     id: 'entity_bundle:node'
     negate: false
-    uuid: 2e678efd-69ec-44db-8d15-29e0f6cea63c
+    uuid: 0c536b31-33ca-4570-95da-69fe3d88759f
     context_mapping:
       node: node
     bundles:
-      event: event
-  c4d2dd5a-e097-4feb-9d3e-b368ed41b4ff:
+      article: article
+  0b844a1c-13ec-49f3-9be4-93f3b0d6001c:
     id: language
     negate: false
-    uuid: c4d2dd5a-e097-4feb-9d3e-b368ed41b4ff
+    uuid: 0b844a1c-13ec-49f3-9be4-93f3b0d6001c
     context_mapping:
       language: 'node:langcode:language'
     langcodes:
-      en: en
+      uk: uk
+      ru: ru
+      so: so
 selection_logic: and
-weight: -3
+weight: -5
 relationships:
   'node:langcode:language':
     label: Language
