THF-501: THF-501: Add docker inside the Drupal project

--- a/.env
+++ b/.env
@@ -24,3 +24,6 @@ DRUPAL_SYNC_SOURCE=main
 
 # Public webroot
 DRUPAL_WEBROOT=public
+
+# URL for Elasticsearch (for job search)
+ELASTIC_PROXY_URL=http://localhost:9200
