THF-501: THF-501: Add to stonehenge-network

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -9,7 +9,8 @@ services:
       - 9200:9200
       - 9300:9300
     networks:
-      - elastic
+      - internal
+      - stonehenge-network
 
 networks:
   elastic:
