--- a/conf/cmi/user.role.jsonapi.yml
+++ b/conf/cmi/user.role.jsonapi.yml
@@ -45,6 +45,7 @@ permissions:
   - 'administer paragraphs settings'
   - 'administer paragraphs types'
   - 'administer pathauto'
+  - 'administer publication date'
   - 'administer taxonomy'
   - 'administer url aliases'
   - 'cancel account'
@@ -189,7 +190,11 @@ permissions:
   - 'revert event revisions'
   - 'revert landing_page revisions'
   - 'revert page revisions'
+  - 'set any published on date'
   - 'set article published on date'
+  - 'set event published on date'
+  - 'set landing_page published on date'
+  - 'set page published on date'
   - 'translate any entity'
   - 'translate article node'
   - 'translate event node'
