--- a/conf/cmi/user.role.nextjs.yml
+++ b/conf/cmi/user.role.nextjs.yml
@@ -27,6 +27,7 @@ dependencies:
     - pathauto
     - publication_date
     - quick_node_clone
+    - scheduler
     - subrequests
     - system
     - taxonomy
@@ -46,6 +47,7 @@ permissions:
   - 'administer paragraphs settings'
   - 'administer paragraphs types'
   - 'administer pathauto'
+  - 'administer publication date'
   - 'administer taxonomy'
   - 'administer url aliases'
   - 'bypass node access'
@@ -192,7 +194,12 @@ permissions:
   - 'revert event revisions'
   - 'revert landing_page revisions'
   - 'revert page revisions'
+  - 'schedule publishing of nodes'
+  - 'set any published on date'
   - 'set article published on date'
+  - 'set event published on date'
+  - 'set landing_page published on date'
+  - 'set page published on date'
   - 'translate any entity'
   - 'translate article node'
   - 'translate event node'
