THF-534: THF-534: change the publisher name

--- a/conf/cmi/field.field.node.event.field_publisher.yml
+++ b/conf/cmi/field.field.node.event.field_publisher.yml
@@ -9,7 +9,7 @@ id: node.event.field_publisher
 field_name: field_publisher
 entity_type: node
 bundle: event
-label: publisher
+label: Publisher
 description: ''
 required: false
 translatable: false
