--- a/conf/cmi/search_api.index.events_sv.yml
+++ b/conf/cmi/search_api.index.events_sv.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.storage.node.field_id
     - field.storage.node.field_image_alt
     - field.storage.node.field_image_url
+    - field.storage.node.field_in_language
     - field.storage.node.field_location
     - field.storage.node.field_location_extra_info
     - field.storage.node.field_short_description
@@ -71,6 +72,16 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_image_url
+  field_in_language:
+    label: 'In Language » Taxonomy term » Name'
+    datasource_id: 'entity:node'
+    property_path: 'field_in_language:entity:name'
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_in_language
+      module:
+        - taxonomy
   field_lead_in:
     label: 'short description » Processed text'
     datasource_id: 'entity:node'
@@ -183,6 +194,7 @@ processor_settings:
       - field_id
       - field_image_alt
       - field_image_url
+      - field_in_language
       - field_lead_in
       - field_location
       - field_location_extra_info
