THF-326: THF-326: remove link with icon from basic page

--- a/conf/cmi/field.field.node.page.field_content.yml
+++ b/conf/cmi/field.field.node.page.field_content.yml
@@ -10,7 +10,6 @@ dependencies:
     - paragraphs.paragraphs_type.events_list
     - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.liftup_with_image
-    - paragraphs.paragraphs_type.link_with_icon
     - paragraphs.paragraphs_type.list_of_links
     - paragraphs.paragraphs_type.news_list
     - paragraphs.paragraphs_type.notification
@@ -42,7 +41,6 @@ settings:
       liftup_with_image: liftup_with_image
       events_list: events_list
       notification: notification
-      link_with_icon: link_with_icon
       news_list: news_list
       subheading: subheading
     negate: 0
@@ -107,12 +105,15 @@ settings:
       link:
         weight: 57
         enabled: false
+      link_are:
+        weight: 61
+        enabled: false
       link_internal:
         weight: 58
         enabled: false
       link_with_icon:
         weight: 61
-        enabled: true
+        enabled: false
       list_of_links:
         weight: -22
         enabled: true
