--- a/conf/cmi/language.content_settings.paragraph.link_with_icon.yml
+++ b/conf/cmi/language.content_settings.paragraph.link_with_icon.yml
@@ -1,9 +1,9 @@
-uuid: 4b6cc087-6fde-4cbc-9834-1da75555c90d
+uuid: c14f9f0c-5ec7-4135-b3a5-b4380c0dcee9
 langcode: en
 status: true
 dependencies:
   config:
-    - taxonomy.vocabulary.event_languages
+    - paragraphs.paragraphs_type.link_with_icon
   module:
     - content_translation
 third_party_settings:
@@ -11,8 +11,8 @@ third_party_settings:
     enabled: true
     bundle_settings:
       untranslatable_fields_hide: '0'
-id: taxonomy_term.event_languages
-target_entity_type_id: taxonomy_term
-target_bundle: event_languages
+id: paragraph.link_with_icon
+target_entity_type_id: paragraph
+target_bundle: link_with_icon
 default_langcode: site_default
-language_alterable: false
+language_alterable: true
