--- a/conf/cmi/core.entity_form_display.paragraph.link_with_icon.default.yml
+++ b/conf/cmi/core.entity_form_display.paragraph.link_with_icon.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.link_with_icon.field_header
     - field.field.paragraph.link_with_icon.field_icon
     - field.field.paragraph.link_with_icon.field_icon_positioning
     - field.field.paragraph.link_with_icon.field_link_list_with_description
@@ -17,22 +18,30 @@ targetEntityType: paragraph
 bundle: link_with_icon
 mode: default
 content:
+  field_header:
+    type: string_textfield
+    weight: 0
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_icon:
     type: select2_icon_widget
-    weight: 2
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
   field_icon_positioning:
     type: select2
-    weight: 3
+    weight: 2
     region: content
     settings:
       width: 100%
     third_party_settings: {  }
   field_link_list_with_description:
     type: paragraphs
-    weight: 4
+    weight: 3
     region: content
     settings:
       title: Paragraph
