--- a/conf/cmi/core.entity_view_display.paragraph.link_with_icon.default.yml
+++ b/conf/cmi/core.entity_view_display.paragraph.link_with_icon.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.link_with_icon.field_header
     - field.field.paragraph.link_with_icon.field_icon
     - field.field.paragraph.link_with_icon.field_icon_positioning
     - field.field.paragraph.link_with_icon.field_link_list_with_description
@@ -16,6 +17,14 @@ targetEntityType: paragraph
 bundle: link_with_icon
 mode: default
 content:
+  field_header:
+    type: string
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 7
+    region: content
   field_icon:
     type: select2_icon_formatter
     label: above
