--- a/conf/cmi/field.field.paragraph.link_are.field_description.yml
+++ b/conf/cmi/field.field.paragraph.link_are.field_description.yml
@@ -12,7 +12,7 @@ bundle: link_are
 label: Description
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
