--- a/conf/cmi/field.field.paragraph.link_are.field_links.yml
+++ b/conf/cmi/field.field.paragraph.link_are.field_links.yml
@@ -14,7 +14,7 @@ bundle: link_are
 label: Links
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
